Add mediated amendment scenarios