@@ -128,6 +128,13 @@ public final class Main {
                         options.bills,
                         options.seed
                 );
+                case "v10" -> CampaignRunner.runV10(
+                        options.outputDir,
+                        options.runs,
+                        options.legislators,
+                        options.bills,
+                        options.seed
+                );
                 default -> throw new IllegalArgumentException("Unknown campaign: " + options.campaignName);
             };
             System.out.println(result.name() + " complete.");
@@ -166,7 +173,7 @@ public final class Main {
             return;
         }
 
-        System.out.printf("%-48s %8s %8s %10s %8s %8s %8s %8s %9s %9s %10s %10s %10s %10s%n",
+        System.out.printf("%-48s %8s %8s %10s %8s %8s %8s %8s %8s %9s %9s %10s %10s %10s %10s%n",
                 "Scenario",
                 "Prod",
                 "Floor",
@@ -175,6 +182,7 @@ public final class Main {
                 "Compromise",
                 "Capture",
                 "Spend",
+                "Amend",
                 "AccessD",
                 "CmteRej",
                 "AntiLobby",
@@ -182,10 +190,10 @@ public final class Main {
                 "PolicyShift",
                 "PropGain"
         );
-        System.out.println("-".repeat(151));
+        System.out.println("-".repeat(161));
 
         for (ScenarioReport report : reports) {
-            System.out.printf("%-48s %8.3f %8.3f %10.3f %8.3f %8.3f %8.3f %8.3f %9.3f %9.3f %10.3f %10.3f %10.3f %10.3f%n",
+            System.out.printf("%-48s %8.3f %8.3f %10.3f %8.3f %8.3f %8.3f %8.3f %8.3f %9.3f %9.3f %10.3f %10.3f %10.3f %10.3f%n",
                     report.scenarioName(),
                     report.productivity(),
                     report.floorConsiderationRate(),
@@ -194,6 +202,7 @@ public final class Main {
                     report.compromiseScore(),
                     report.lobbyCaptureIndex(),
                     report.lobbySpendPerBill(),
+                    report.amendmentRate(),
                     report.accessDenialRate(),
                     report.committeeRejectionRate(),
                     report.antiLobbyingSuccessRate(),
@@ -209,10 +218,10 @@ public final class Main {
     }
 
     private static void printCsv(List<ScenarioReport> reports) {
-        System.out.println("scenario,totalBills,enactedBills,productivity,floor,avgSupport,welfare,cooperation,compromise,gridlock,accessDenied,committeeRejected,challengeRate,lowSupport,popularFail,policyShift,proposerGain,lobbyCapture,publicAlignment,antiLobbyingSuccess,privateGainRatio,lobbySpendPerBill,defensiveLobbyingShare,captureReturnOnSpend,publicPreferenceDistortion,vetoes,overriddenVetoes");
+        System.out.println("scenario,totalBills,enactedBills,productivity,floor,avgSupport,welfare,cooperation,compromise,gridlock,accessDenied,committeeRejected,challengeRate,lowSupport,popularFail,policyShift,proposerGain,lobbyCapture,publicAlignment,antiLobbyingSuccess,privateGainRatio,lobbySpendPerBill,defensiveLobbyingShare,captureReturnOnSpend,publicPreferenceDistortion,amendmentRate,amendmentMovement,vetoes,overriddenVetoes");
         for (ScenarioReport report : reports) {
             System.out.printf(Locale.ROOT,
-                    "%s,%d,%d,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%d,%d%n",
+                    "%s,%d,%d,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%.6f,%d,%d%n",
                     report.scenarioName(),
                     report.totalBills(),
                     report.enactedBills(),
@@ -238,6 +247,8 @@ public final class Main {
                     report.defensiveLobbyingShare(),
                     report.captureReturnOnSpend(),
                     report.publicPreferenceDistortion(),
+                    report.amendmentRate(),
+                    report.averageAmendmentMovement(),
                     report.vetoes(),
                     report.overriddenVetoes()
             );
@@ -267,7 +278,7 @@ public final class Main {
     }
 
     private static String bar(double value, int width) {
-        double normalized = Math.max(0.0, Math.min(1.0, value));
+        double normalized = Math.clamp(value, 0.0, 1.0);
         int filled = (int) Math.round(normalized * width);
         return "[" + "#".repeat(filled) + ".".repeat(width - filled) + "]";
     }
@@ -497,7 +508,7 @@ public final class Main {
                       --scenarios <keys>  Comma-separated scenario keys
                       --format <kind>     table, csv, or bars
                       --charts            Add ASCII bar charts after the table
-                      --campaign <name>   Run a named campaign, currently v0, v1, v2, v3, v4, v5, v6, v7, v8, or v9
+                      --campaign <name>   Run a named campaign, currently v0, v1, v2, v3, v4, v5, v6, v7, v8, v9, or v10
                       --output-dir <path> Campaign output directory
                       --seed <n>          Reproducible random seed
                       --help              Show this message
